fix wrong install-script url

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,6 @@
 	"name": "Ubuntu",
 	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command":  "bash <(curl https://raw.githubusercontent.com/MontiCore/montithings/develop/installWindows.ps1)"}
+		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command":  "bash <(curl https://raw.githubusercontent.com/MontiCore/montithings/develop/installLinux.sh)"}
 	}
 }
