--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,8 @@
 	"name": "Ubuntu",
 	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command":  "sudo apt-get install software-properties-common && bash <(curl https://raw.githubusercontent.com/MontiCore/montithings/develop/installLinux.sh)"}
+		"ghcr.io/devcontainers-contrib/features/bash-command:1": {
+			"command":  "bash <(curl https://raw.githubusercontent.com/julius-gummersbach/montithings/develop/installLinux.sh)"
+		}
 	}
 }
