attempt to change workspace folder for github codespace

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
 	"name": "MontiThings GitHub Codespace",
-	"build": { "dockerfile": "Dockerfile" }
+	"build": { "dockerfile": "Dockerfile" },
+	"workspaceFolder": "/montithings"
 }
